1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

	* src.ent.in: New file.

	* src.ent: Removed.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
