@@ -1,0 +1,2 @@
+\input @top_srcdir@/macros.tex
+\input _refbook.tex
